Fix background being blurry

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
 	background-attachment: scroll;
 	background-position: 0 0;
 	background-repeat: repeat;
-	background-size: contain;
 }
 
 #navbar {
